[package]
name = "github-gist-generator"
version = "0.1.0"
authors = ["chaixb <1481569358@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
regex = "1.3.1"
reqwest = "0.9.20"
serde = "1.0.99"
base64 = "0.10.1"
